<resources>
    <string name="app_name">Tip Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Main Activity strings-->
    <string name="bill">Bill Amount:</string>
    <string name="percent">Percent:</string>
    <string name="tip">Tip:</string>
    <string name="total">Total:</string>
    <string name="currency_symbol">$</string>

    <!--Options Fragment Strings-->
    <string name="rounding">Rounding:</string>
    <string name="split">Split the bill?</string>
    <string name="per_person">Per person total:</string>
    <string-array name="spinner_rounding">
        <item>None</item>
        <item>Tip</item>
        <item>Total</item>
    </string-array>
    <string-array name="spinner_split">
        <item>No</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <!-- Help Fragment Strings -->
    <string name="welcome_message">Welcome to the tip calculator!\n
    This is a simple program designed to help users calculate tips based on a bill total, a percent tip, and
    the number of ways that the bill is being split.</string>
    <string name="step_one_label">Step one:</string>
    <string name="step_two_label">Step two:</string>
    <string name="step_three_label">Step three:</string>

    <string name="step_one_instructions">Add your bill in the "Bill Amount" section</string>
    <string name="step_two_instructions">Utilize the slider to select the percent you would like to tip</string>
    <string name="step_three_instructions">Use the "Options" screen to calculate the bill between multiple people</string>

    <string name="options_overview">Overview of the Options:</string>
    <string name="split_label">Split:  </string>
    <string name="rounding_label">Rounding:</string>
    <string name="per_person_label">Per person:</string>
    <string name="split_instructions">Using the split option will divide the total price between 1-6 people.</string>
    <string name="rounding_instructions">Rounding will round the bill total, or the tip, to the nearest whole dollar.</string>
    <string name="per_person_instructions">This is where the per-person total is displayed</string>

</resources>